--- a/themes/speak/css/custom.css
+++ b/themes/speak/css/custom.css
@@ -42,6 +42,53 @@ section#block-callcrisis {
 .container-header {
     position: relative;
 }
+#block-speak-content .posts{
+    min-height: 36rem;
+    position: relative;
+}
+#block-speak-content .more{
+    bottom: 0;
+    position: absolute;
+}
+#block-speak-content .pager{
+    clear: both;
+    text-align: center;
+    padding: 3em 0;
+}
+#block-webform-2 {
+    background-color: rgb(200, 200, 200);
+    padding: 3em 0;
+}
+#block-webform-2 form{
+    max-width: 75rem;
+    margin-right: auto;
+    margin-left: auto;
+    overflow: hidden;
+}
+#webform-submission-suscribete-add-form #edit-markup h4{
+    font-weight: normal;
+}
+#webform-submission-suscribete-add-form .form-item-nombre input,
+#webform-submission-suscribete-add-form .form-item-email input{
+    border: 1px solid #cacaca;
+    border-radius: 16px;
+}
+#webform-submission-suscribete-add-form #edit-actions input{
+    margin-top: 22px;
+    margin-bottom: 0;
+    color: white;
+    text-transform: uppercase;
+}
+.autor-blog{
+    padding: 0 4em 2em 4em; 
+}
+.autor-blog .autor img{
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+.autor-blog figure.blog{
+    display: inline-block;
+}
 
 @media only screen and (max-width: 600px)
 {
